http-echo-deployment.yaml
# https://github.com/mendhak/docker-http-https-echo

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: http-echo
  name: http-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-echo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-echo
    spec:
      containers:
      - image: docker.io/mendhak/http-https-echo:33
        name: http-https-echo
        resources: {}


---

apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  selector:
    app: http-echo
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP

---

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: http-echo
  namespace: default
spec:
  gateways:
  - default/istio-gateway
  hosts:
  - http-echo.localdomain
  http:
  - match:
    - uri:
        prefix: /oauth
    name: oauth2-route
    route:
    - destination:
        host: http-echo
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    name: re-write route
    rewrite:
      uri: /rewrote/
    route:
    - destination:
        host: http-echo
        port:
          number: 8080
