path-based-route-seprt-nmspc.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: webapp-a

---

apiVersion: v1
kind: Namespace
metadata:
  name: webapp-b

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-a
  namespace: webapp-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-a
  template:
    metadata:
      labels:
        app: nginx-a
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: web-content-volume
          configMap:
            name: web-content-a

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-b
  namespace: webapp-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-b
  template:
    metadata:
      labels:
        app: nginx-b
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web-content-volume
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: web-content-volume
          configMap:
            name: web-content-b

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-a
  namespace: webapp-a
spec:
  selector:
    app: nginx-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-b
  namespace: webapp-b
spec:
  selector:
    app: nginx-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer


---

# path based route for A, two virtual services with same host and gateway
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-path-a
  namespace: webapp-a
spec:
  gateways:
    - default/istio-gateway
  hosts:
    - nginx.localdomain
  http:
    - match:
        - uri:
            prefix: /a
      name: nginx-path-a-route
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx-a
            port:
              number: 80

---

# path based route for B, two virtual services with same host and gateway
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-path-b
  namespace: webapp-b
spec:
  gateways:
    - default/istio-gateway
  hosts:
    - nginx.localdomain
  http:
    - match:
        - uri:
            prefix: /b
      name: nginx-path-b-route
      rewrite:
        uri: /
      route:
        - destination:
            host: nginx-b
            port:
              number: 80
